Fix icons on IE11 (#95)

--- a/src/footer/venue/venue.scss
+++ b/src/footer/venue/venue.scss
@@ -40,6 +40,7 @@
       
       > .mwz-icon {
         width: 30px;
+        height: 30px;
       }
       &::after {
         display:none;
